# fvwm-menu.rs

./: Cargo.toml  README.md  arcolinux.txt
applications/: base.desktop  bibletime.desktop  bluefish.desktop  brasero.desktop  bssh.desktop  bvnc.desktop  calc.desktop  chromium-browser.desktop  draw.desktop  exo-preferred-applications.desktop  firefox.desktop  gcr-prompter.desktop  gcr-viewer.desktop  geoclue-where-am-i.desktop  gimp.desktop  goland.desktop  gucharmap.desktop  gvim.desktop  impress.desktop  math.desktop  menulibre.desktop  mimeinfo.cache  pycharm-pro.desktop  pycharm.desktop  rhythmbox-device.desktop  rhythmbox.desktop  ristretto.desktop  startcenter.desktop  thunderbird.desktop  writer.desktop  xfburn.desktop  xscreensaver-blank.desktop  xscreensaver-lock.desktop  xscreensaver-start.desktop  xscreensaver-stop.desktop  xterm.desktop
data/: xdg.txt
src/: .fvwmrc  files.rs  fvwmrc.toml  main.rs  menu.rs  menu_model.rs  shortname.json
src/model/: menu.rs  mod.rs
