[package]
name = "fvwm-menu"
version = "0.1.0"
authors = ["Ronverbs <rong1611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = " 0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
directories = "4.0.1"